Fix multiple z-index issues with MainComponent (carousel indicator, svg map and navbar dropdown)

--- a/src/app/components/main/main.component.scss
+++ b/src/app/components/main/main.component.scss
@@ -1,5 +1,8 @@
 @import 'src/variables';
 
+* {
+  z-index: 1;
+}
 .c-container {
   position: relative;
   height: 0;
